# cxx--mini-tools

./: .gitignore  NOTICE  README.md  TODO.md  bun.lockb  clean build.bat  collect executables.bat  copy-executables.bat  copy-executables.mts  info.hxx  main.hxx  open-projects.bat  open-projects.mts  package.json
automation-scripts/: copy-executables.mts  open-projects.mts
cxx--lsd--list-directory/: CMakeLists.txt  help.hxx  main.cxx
cxx--mkd--make-directory/: CMakeLists.txt  help.hxx  main.cxx  test.mjs
cxx--mkf--make-file/: CMakeLists.txt  help.hxx  main.cxx  test.mjs
cxx--run/: CMakeLists.txt  help.hxx  main.cxx
cxx--run-elevate/: CMakeLists.txt  help.hxx  main.cxx
cxx--watch/: CMakeLists.txt  help.hxx  lib-watch.mjs  lib.watch.mjs  main.cxx  test.bat  test.mjs
release/: 2024-06-06.7z  2024-06-10.7z  2024-06-15.7z  2024-07-04.7z
